--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,22 +93,21 @@ jobs:
             HOST="${N8N_HOST:-$PUBLIC_IP}"
             WEBHOOK="${WEBHOOK_URL:-$PROTO://$HOST:$PORT}"
 
-            cat > .env << EOF
-            N8N_IMAGE=${{ secrets.OCIR_REGISTRY_URL }}/${{ secrets.OCIR_TENANCY_NAMESPACE }}/n8n:latest
-            N8N_HOST=$HOST
-            N8N_PORT=$PORT
-            N8N_PROTOCOL=$PROTO
-            WEBHOOK_URL=$WEBHOOK
-            GENERIC_TIMEZONE=${GENERIC_TIMEZONE:-UTC}
-            N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY:-}
-            N8N_BASIC_AUTH_ACTIVE=true
-            N8N_BASIC_AUTH_USER=${N8N_BASIC_AUTH_USER:-admin}
-            N8N_BASIC_AUTH_PASSWORD=${N8N_BASIC_AUTH_PASSWORD:-change_me}
-            N8N_DIAGNOSTICS_ENABLED=false
-            N8N_TELEMETRY_ENABLED=false
-            N8N_PERSONALIZATION_ENABLED=false
-            NODE_ENV=production
-            EOF
+            printf "%s\n" \
+            "N8N_IMAGE=${{ secrets.OCIR_REGISTRY_URL }}/${{ secrets.OCIR_TENANCY_NAMESPACE }}/n8n:latest" \
+            "N8N_HOST=$HOST" \
+            "N8N_PORT=$PORT" \
+            "N8N_PROTOCOL=$PROTO" \
+            "WEBHOOK_URL=$WEBHOOK" \
+            "GENERIC_TIMEZONE=${GENERIC_TIMEZONE:-UTC}" \
+            "N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY:-}" \
+            "N8N_BASIC_AUTH_ACTIVE=true" \
+            "N8N_BASIC_AUTH_USER=${N8N_BASIC_AUTH_USER:-admin}" \
+            "N8N_BASIC_AUTH_PASSWORD=${N8N_BASIC_AUTH_PASSWORD:-change_me}" \
+            "N8N_DIAGNOSTICS_ENABLED=false" \
+            "N8N_TELEMETRY_ENABLED=false" \
+            "N8N_PERSONALIZATION_ENABLED=false" \
+            "NODE_ENV=production" > .env
             docker compose pull
             docker compose up -d
             docker compose ps
