Update docker-compose to use .env file instead of .env.local for environment variable configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ${N8N_IMAGE:-n8nio/n8n:latest}
     platform: linux/arm64
     env_file:
-      - .env.local
+      - .env
     ports:
       - "${N8N_PORT:-5678}:5678"
     volumes:
